<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Stacker</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="start_game">Start Game</string>
    <string name="welcome">Welcome to Blue Sky\'s Stacker</string>
    <string name="title_activity_puzzle">Puzzle</string>
    <string name="hurrah">Hurrah!!!</string>
    <string name="stacker">Stacker</string>
    <string name="title_activity_game">GameActivity</string>
    <string name="kg1">1 kg</string>
    <string name="kg2">2 kg</string>
    <string name="kg5">5 kg</string>
    <string name="kg10">10 kg</string>
    <string name="title_activity_final_score">FinalScoreActivity</string>
    <string name="player1">Player 1</string>
    <string name="player2">Player 2</string>
    <string name="score1">5</string>
    <string name="score2">4</string>
    <string name="EndGame">End Game</string>
    <string name="EndTurn">End Turn</string>

</resources>
